Corriger les chemins d'image dans le fichier SCSS et le composant Header

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -414,7 +414,7 @@ body {
 white-space: pre-line; /* conserve retours à la ligne */
 }}
 .blue {
-background-image:url(images/heroBg.svg);
+background-image:url(/images/heroBg.svg);
 background-repeat: no-repeat;
 background-size:auto;
 background-position: 100% 102%;
