Mise à jour des chemins d'image pour les éléments de fond dans les fichiers SCSS et Vue

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -822,7 +822,7 @@ body {
   #example-0 {
     .inner-example {
       background: #a7f49d;
-      background-image: url(images/concession.svg);
+      background-image: url(/images/concession.svg);
       background-repeat: no-repeat;
       background-position: right bottom;
     }
