Add new SVG icons for calendar, info, menu, people, and shop
- Created iconCal.svg for calendar representation.
- Created iconInfo.svg for informational purposes.
- Created iconMenu.svg for menu navigation.
- Created iconPeople.svg for user or people representation.
- Created iconShop.svg for shopping or commerce representation.

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -42,6 +42,14 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: FONTSPRINGDEMO-Recoleta-Medium;
+  src: url("/fonts/Recoleta-Regular.woff2") format("woff2"),
+    url("/fonts/Recoleta-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
 @font-face {
   font-family: FONTSPRINGDEMO-RecoletaMedium;
